♻️ REFACTOR: toList()로 코드 일관성 유지